# voicehook-v4

./: .gitignore  CUTOVER.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: marketing-discovery.md
.github/workflows/: ci.yml  e2e.yml
apps/agent/: __main__.py  cli.py  health.py  llm.py  relay.py  server.py  signals.py  slug.py  tokens.py  voice.py  worker.py
apps/agent/tests/: conftest.py  test_bootstrap.py  test_cli.py  test_e2e_contract.py  test_health.py  test_infra_shape.py  test_llm.py  test_relay.py  test_server.py  test_signals.py  test_slug.py  test_tokens.py  test_voice.py  test_worker.py
deploy/: deploy.sh
docs/: CONCEPT-monetization-positioning.md
docs/diagrams/: 01-services-on-box.excalidraw  02-call-lifecycle.excalidraw  03-deploy-pipeline.excalidraw  04-secrets-flow.excalidraw  05-senior-brain-relay.excalidraw
infra/caddy/: Caddyfile.tmpl
infra/livekit/: docker-compose.yml  livekit.yaml.example
infra/systemd/: voicehook-agent.service
infra/terraform/: .terraform.lock.hcl  cloud-init.yaml  main.tf  variables.tf  versions.tf
scripts/: deploy-staging.sh
skills/voicehook-join/: SKILL.md
tests/e2e/: README.md
web/: faq.html  robots.txt  sitemap.xml  voice.html
web/agent/: SKILL.md
